[tool.poetry]
name = "lane-queues"
version = "0.1.0"
description = ""
authors = ["DrSkippy <scott@aspenmesh.io>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
numpy = "^1.17.4"
pandas = "^0.25.3"
matplotlib = "^3.1.2"
jupyter = "^1.0.0"
scipy = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
